src/scss/global.scss
html,
body {
	-webkit-tap-highlight-color: transparent;

	font-family: var(--font-sans-serif);
	font-size: 16px;
	background-color: var(--color-background-body);
	margin: 0;
	scrollbar-gutter: stable;

	&.full-height {
		height: 100%;
	}
}

html {
	// scroll-behavior: smooth;
	background-color: rgba(rgb(106, 111, 117), 0.92);
}

h1 {
	font-size: clamp(2.75rem, 7vw + 0.5rem, 4.125rem);
	font-weight: 700;
	line-height: 150%;
	letter-spacing: -0.01em;
}

h2 {
	font-size: clamp(2.125rem, 5vw + 0.5rem, 2.75rem);
	font-weight: 700;
	line-height: 150%;
	letter-spacing: -0.01em;
}

h3 {
	font-size: clamp(1.375rem, 3vw + 0.5rem, 1.75rem);
	font-weight: 700;
	line-height: 150%;
}

h4 {
	font-size: 1.375rem;
}

h5 {
	font-size: 1.125rem;
}

li {
	font-size: 1.125rem;
}

.subtitle {
	font-size: clamp(1.22rem, 3vw + 0.5rem, 1.5rem);
	line-height: 150%;
}

strong,
p,
.toolcard-span {
	font-size: 1.125rem;
	line-height: 155%;
	letter-spacing: 0.005em;
}

a {
	color: var(--color-blue);
}

.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	border: 0;
}

a,
button {
	font-size: 1.125rem;

	&.focus-indicator {
		border-radius: 0.375rem;
		cursor: pointer;
		padding: 0;
		border: none;

		text-decoration: underline;
		text-decoration-color: var(--color-blue);
		text-underline-offset: 0.125rem;
		text-decoration-thickness: 2px;
		text-decoration-skip-ink: auto;
		transition: text-decoration-thickness 0.2s ease;

		&:hover,
		&:focus {
			text-decoration-thickness: 4px;
			text-decoration-skip-ink: none;
		}

		&:focus-visible {
			outline: 2px solid var(--color-blue);
		}
	}
}

.back-to-startpage {
	display: flex;
	align-items: center;
	padding: 0.25rem 0.375rem;
	cursor: pointer;
	color: var(--color-white);
	text-decoration: none;

	gap: 0.625rem;
	border-radius: 3rem;

	img {
		width: 2rem;
		height: 2rem;
	}

	&:hover,
	&:focus {
		outline: 2px solid var(--color-white);
		outline-offset: 2px;
	}
}

.checkbox-input-label-wrapper {
	cursor: pointer;
	display: flex;
	align-items: center;
	gap: 0.375rem;

	input {
		-webkit-appearance: none;
		appearance: none;
		background-color: var(--color-white);

		margin: 0;

		height: 1.25rem;
		width: 1.25rem;
		aspect-ratio: 1;

		border-radius: 0.375rem;
		border: 1px solid var(--color-black);

		cursor: pointer;

		display: grid;
		place-content: center;

		&:checked:before {
			content: '';
			width: 0.8rem;
			height: 0.8rem;
			box-shadow: inset 1rem 1rem var(--color-white);

			transform-origin: bottom left;
			clip-path: polygon(13% 50%, 5% 65%, 45% 100%, 100% 10%, 83% 0%, 40% 75%);
		}

		&:checked {
			background-color: var(--color-black);
			border: 2px solid var(--color-black);
		}

		&:focus,
		&:hover {
			outline: 2px solid var(--color-blue);
			outline-offset: 2px;
		}
	}
}

